src/views/App/App.css
/* ... */
.blinking-border {
  animation: blink-border 1s linear infinite;
}


@keyframes blink {
  50% {
    background-color: yellow;
  }
}

.blinking {
  animation: blink 1s linear infinite;
}


@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 0.5em;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.5em;
}

.read-the-docs {
  color: #888;
}



.settings-button {
  position: fixed;
  top: 10px; /* Ajustez cette valeur pour positionner le bouton selon vos besoins */
  left: 10px; /* Ajustez cette valeur pour positionner le bouton selon vos besoins */
  z-index: 1050; /* S'assure que le bouton reste au-dessus du volet */
  cursor: pointer;
  padding: 8px 12px;
  background-color: #007bff; /* Couleur de fond du bouton */
  color: white; /* Couleur du texte du bouton */
  border: none;
  border-radius: 4px; /* Arrondi les angles du bouton */
  box-shadow: 0 2px 4px rgba(0,0,0,0.2); /* Ombre pour un effet de relief */
}

.settings-panel {
  position: fixed;
  top: 0;
  left: 0;
  width: 250px; /* Largeur du volet */
  height: 100%; /* Hauteur totale de la vue */
  background-color: #4d4545; /* Couleur de fond du volet */
  border-right: 1px solid #ccc; /* Bordure droite pour séparer du reste de la page */
  box-shadow: 2px 0 5px rgba(0,0,0,0.2); /* Ombre pour un effet de profondeur */
  transform: translateX(-100%); /* Démarre hors du cadre de la vue */
  transition: transform 0.5s cubic-bezier(0.17, 0.67, 0.83, 0.67), visibility 0s 0.5s;
  will-change: transform; 
  z-index: 1040; /* S'assure que le volet est au-dessus du contenu de la page mais sous le bouton */
}



.settings-panel h2 {
  padding: 20px; /* Espacement autour du titre pour plus de clarté */
}

.settings-panel button {
  display: block; /* Assure que les boutons prennent toute la largeur */
  width: 100%; /* Maximise la largeur des boutons pour faciliter le clic */
  padding: 10px; /* Padding pour confort de clic */
  margin: 10px 0; /* Marge entre les boutons */
  background-color: #000000; /* Fond blanc pour les boutons */
  border: 1px solid #ddd; /* Légère bordure pour définir les boutons */
  cursor: pointer;
}

.settings-panel label {
  display: block; /* Permet au label d'être sur sa propre ligne */
  margin: 20px 0 10px; /* Espacement autour du label */
}

.settings-panel input[type="range"] {
  width: 90%; /* Largeur du slider pour s'adapter au conteneur */
  margin: auto; /* Centre le slider */
  display: block; /* Assure que le slider est sur sa propre ligne */
}
.settings-panel {
  position: fixed;
  top: 0;
  left: 0;
  width: 250px;
  height: 100%;
  background-color: #f8f8f8;
  border-right: 1px solid #ccc;
  box-shadow: 2px 0 5px rgba(0,0,0,0.2);
  transform: translateX(-100%);
  
  transition: transform 0.5s cubic-bezier(0.17, 0.67, 0.83, 0.67), visibility 0s 0.5s;
  will-change: transform; 

  z-index: 1040;
}
.settings-panel {
  transform: translateX(-100%);
  transition: transform 0.5s ease-in;
}



.settings-panel.open {
  transform: translateX(0);
  background-color: red; 
  transition-delay: 0s;/* Ceci devrait rendre le changement évident */
}

.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black; /* Style souligné pour indiquer qu'il s'agit d'un tooltip */
}

.tooltip .tooltip-text {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Positionnement */
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -60px;

  /* Effets */
  
  opacity: 0;
  transition: visibility 0s, opacity 0.3s ease-in-out;
}

.tooltip:hover .tooltip-text {
  visibility: visible;
  opacity: 1;
  transition-delay: 0s; /* Pas de délai lors du passage à visible */
}
.getRobots-button {
  padding: 10px 10px;
  background-color: #4CAF50; /* Couleur de fond verte */
  color: white; /* Texte blanc */
  border: none; /* Pas de bordure */
  border-radius: 5px; /* Bords arrondis */
  cursor: pointer; /* Curseur en forme de pointeur */
  transition: background-color 0.3s; /* Transition douce pour le hover */
}
.button-hover-animate {
  transition: background-color 0.3s ease;
  will-change: background-color; /* Indiquer au navigateur que cette propriété sera animée */
}

.getRobots-button:hover {
  background-color: #45a049; /* Couleur plus foncée au survol */
  will-change: background-color;
}

.instructions-container {
  border: 2px solid #db2525; 
  border-radius: 8px; /* Coins arrondis */
  padding: 5px 5px 5px 5px; /* Réduit le padding supérieur */
  margin: 2px; /* Marge extérieure */
  background-color: #f9f9f9; /* Fond légèrement gris */
  width: 600px; /* Largeur fixe */
  box-shadow: 0 4px 8px rgba(163, 160, 160, 0.1); /* Ombre discrète */
}

.instructions-container h4 {
  color: #333; /* Titre en couleur plus sombre */
  margin-top: 3px; /* Réduit l'espace au-dessus du titre */
  margin-bottom: 3px; /* Espace réduit après le titre */
  font-size: 26px; /* Taille de la police */
}

.instructions-container ol {
  padding-left: 20px; /* Alignement des numéros à l'intérieur du bloc */
  font-size: 30px; /* Taille de la police pour les listes */
  margin-top: 3px; /* Réduit l'espace au-dessus de la liste */
  
}

.instructions-container li {
  margin-bottom: 3px; /* Espace entre les lignes */
  color: #000000;
  font-size: 20px; /* Taille de la police pour les éléments de liste */
  text-align: left;
}
.trainer-table {
  width: 100%;
  background-color: #5a5a5a;
  border-collapse: collapse;
}

.trainer-table th,
.trainer-table td {
  border: 5px solid rgb(168, 168, 192);
  padding: 8px;
  text-align: center;
}

.trainer-table tbody tr:nth-child(odd) {
  background-color: #5a5a5a;
}
/* ... */

